# internal/router/router.go
@@ -24,39 +24,40 @@ func New(postSvc *service.PostService, authorSvc *service.AuthorService, categor
 			r.Post("/register/verify", authH.VerifyAndRegister)
 			r.Post("/login", authH.Login)
 		})
+		authMW := middleware.RequireAuth(cfg.JWTSecret)
 		r.Route("/posts", func(r chi.Router) {
 			ph := handler.NewPostHandler(postSvc)
 			r.Get("/", ph.List)
 			r.Route("/{postId}/comments", func(r chi.Router) {
 				ch := handler.NewCommentHandler(commentSvc)
 				r.Get("/", ch.ListByPostID)
-				r.Post("/", ch.Create)
+				r.With(authMW).Post("/", ch.Create)
 			})
 			r.Get("/{id}", ph.GetByID)
-			r.With(middleware.RequireAuth(cfg.JWTSecret)).Post("/", ph.Create)
-			r.With(middleware.RequireAuth(cfg.JWTSecret)).Put("/{id}", ph.Update)
-			r.With(middleware.RequireAuth(cfg.JWTSecret)).Delete("/{id}", ph.Delete)
+			r.With(authMW).Post("/", ph.Create)
+			r.With(authMW).Put("/{id}", ph.Update)
+			r.With(authMW).Delete("/{id}", ph.Delete)
 		})
 		r.Route("/authors", func(r chi.Router) {
 			ah := handler.NewAuthorHandler(authorSvc)
 			r.Get("/", ah.List)
 			r.Post("/", ah.Create)
 			r.Get("/{id}", ah.GetByID)
-			r.Put("/{id}", ah.Update)
-			r.Delete("/{id}", ah.Delete)
+			r.With(authMW).Put("/{id}", ah.Update)
+			r.With(authMW).Delete("/{id}", ah.Delete)
 		})
 		r.Route("/categories", func(r chi.Router) {
 			ch := handler.NewCategoryHandler(categorySvc)
 			r.Get("/", ch.List)
-			r.Post("/", ch.Create)
+			r.With(authMW).Post("/", ch.Create)
 			r.Get("/{id}", ch.GetByID)
-			r.Put("/{id}", ch.Update)
-			r.Delete("/{id}", ch.Delete)
+			r.With(authMW).Put("/{id}", ch.Update)
+			r.With(authMW).Delete("/{id}", ch.Delete)
 		})
 		r.Route("/comments", func(r chi.Router) {
 			ch := handler.NewCommentHandler(commentSvc)
-			r.Put("/{id}", ch.Update)
-			r.Delete("/{id}", ch.Delete)
+			r.With(authMW).Put("/{id}", ch.Update)
+			r.With(authMW).Delete("/{id}", ch.Delete)
 		})
 	})
 	return r
